# Mixxc

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  mixxc.1
.github/: shell.nix
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
doc/: mixxc.1
src/: accent.rs  anchor.rs  app.rs  colors.rs  error.rs  label.rs  main.rs  style.rs  xdg.rs
src/proto/: mod.rs  wayland.rs  x.rs
src/server/: error.rs  mod.rs  pipewire.rs  pulse.rs
src/widgets/: fill.rs  imp.rs  mod.rs  sliderbox.rs  switchbox.rs
style/: default.css  default.sass  default.scss
