[package]
name = "mixxc"
version = "0.1.9"
authors = ["Elvyria <elvyria@tutanota.com>"]
description = "Minimalistic volume mixer."
repository = "https://github.com/Elvyria/mixxc"
license = "MIT"
edition = "2021"

[features]
Wayland = ["dep:gtk4-layer-shell"]
Sass = ["dep:grass"]
X11 = ["dep:x11rb", "dep:gdk-x11"]
PipeWire = []

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
argh = "0.1"
bitflags = "2.4"
gtk4-layer-shell = { version = "0.2", optional = true }
tracker = "0.1"
enum_dispatch = "0.3"
grass = { version = "0.13", optional = true }
color-print = "0.3.5"
tokio-util = "0.7.9"

[dependencies.tokio]
version = "1.33"
features = ["time", "macros"]

[dependencies.x11rb]
version = "0.12.0"
optional = true
features = ["xinerama"]

[dependencies.gdk-x11]
package = "gdk4-x11"
version = "0.7"
optional = true
features = ["xlib"]

[dependencies.relm4]
version = "=0.7.0-beta.2"
default_features = false
features = ["macros"]

[dependencies.libpulse-binding]
version = "2.0"
default_features = false
features = ["pa_v8"]
