[package]
name = "mixxc"
version = "0.2.2"
authors = ["Elvyria <elvyria@tutanota.com>"]
description = "Minimalistic volume mixer."
repository = "https://github.com/Elvyria/mixxc"
license = "MIT"
edition = "2021"

[features]
Wayland = ["dep:gtk4-layer-shell"]
Sass = ["dep:grass"]
X11 = ["dep:x11rb", "dep:gdk-x11"]
PipeWire = []
Accent = ["dep:zbus"]

[dependencies]
thiserror = "1.0"
argh = "0.1"
bitflags = "2.5"
gtk4-layer-shell = { version = "0.3", optional = true }
tracker = "0.2"
enum_dispatch = "0.3"
grass = { version = "0.13", package = "grass_compiler", optional = true }
color-print = "0.3.5"
tokio-util = "0.7.10"
smallvec = { version = "1.13", features = ["union"] }
num-traits = "0.2"
parking_lot = "0.12.3"
glib = "0.19"

[dependencies.tokio]
version = "1.37"
features = ["time", "macros"]

[dependencies.x11rb]
version = "0.13"
optional = true
features = ["xinerama"]

[dependencies.gdk-x11]
package = "gdk4-x11"
version = "0.8"
optional = true
features = ["xlib"]

[dependencies.relm4]
version = "0.8.1"
default-features = false
features = ["macros"]

[dependencies.libpulse-binding]
version = "2.0"
default-features = false
features = ["pa_v8"]

[dependencies.zbus]
version = "4"
default-features = false
features = ["tokio"]
optional = true
