[package]
name = "mixxc"
version = "0.2.2"
authors = ["Elvyria <elvyria@tutanota.com>"]
description = "Minimalistic volume mixer."
repository = "https://github.com/Elvyria/mixxc"
license = "MIT"
edition = "2021"

[features]
Wayland = ["dep:gtk4-layer-shell"]
Sass = ["dep:grass"]
X11 = ["dep:x11rb", "dep:gdk-x11"]
PipeWire = []
Accent = ["dep:zbus"]

[dependencies]
thiserror = "1.0"
argh = "0.1"
bitflags = "2.6"
gtk4-layer-shell = { version = "0.4", optional = true }
tracker = "0.2"
enum_dispatch = "0.3"
grass = { version = "0.13", package = "grass_compiler", optional = true }
color-print = "0.3.6"
tokio-util = "0.7.12"
smallvec = { version = "1.13", features = ["union"] }
num-traits = "0.2"
parking_lot = "0.12.3"
glib = "0.20"

[dependencies.tokio]
version = "1.40"
features = ["time", "macros"]

[dependencies.x11rb]
version = "0.13"
optional = true
features = ["xinerama"]

[dependencies.gdk-x11]
package = "gdk4-x11"
version = "0.8"
optional = true
features = ["xlib"]

[dependencies.relm4]
version = "0.9.1"
default-features = false
features = ["macros"]

[dependencies.libpulse-binding]
version = "2.28"
default-features = false
features = ["pa_v8"]

[dependencies.zbus]
version = "5"
default-features = false
features = ["tokio"]
optional = true
